--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
-
-    <script src="exercicios/02.js"></script>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <style>
       body {
         background-color: #333;
-        color: #fff;
       }
     </style>
+
+    <script src="03_classes.js"></script>
   </head>
-  <body>
-    <h1></h1>
-  </body>
+  <body></body>
 </html>
