feat: aula 03 - argumentos padrão em funções e construtores de classes + propriedades condicionais

--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -12,7 +12,7 @@
       }
     </style>
 
-    <script src="03_classes.js"></script>
+    <script src="exercicios/04.js"></script>
   </head>
   <body></body>
 </html>
