--- a/aula-05/encapsulamento/index.html
+++ b/aula-05/encapsulamento/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      body {
+        background: #333;
+      }
+    </style>
   </head>
   <body>
-    <script src="02.js"></script>
+    <script src="03_album.js"></script>
   </body>
 </html>
