feat: aula 05 - exercícios do sorteio e restaurante

--- a/aula-05/index.html
+++ b/aula-05/index.html
@@ -13,6 +13,6 @@
     </style>
   </head>
   <body>
-    <script src="03_album.js"></script>
+    <script src="exercicios/11_restaurante_accessors.js"></script>
   </body>
 </html>
