feat: aula 15 - propriedades e métodos estáticos

--- a/aula-14/exercicios/index.html
+++ b/aula-14/exercicios/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <script src="../exercicios/28-estatico.js" type="module"></script>
+    <style>
+      body {
+        background-color: #333;
+      }
+    </style>
+
+    <script src="./28-estatico.js" type="module"></script>
   </head>
   <body></body>
 </html>
